--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,7 @@ body {
     background: white;
     padding: 0.75em;
     height: auto;
+    opacity: 0.85;
 }
 .counties {
   stroke-linecap: round;
