--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,29 @@ body {
     box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.1);
 }
 
+img {
+  width: 5em;
+  display:block;
+    margin:auto;
+  height: 2em;
+}
+
+h3 {
+  font-family: "Roboto";
+  font-size: 12px;
+  opacity: 0.5;
+  text-align: center;
+}
+
+h4 {
+  font-family: "Roboto";
+  font-size: 12px;
+  opacity: 0.7;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 900;
+}
+
 
 }
 .panel p {
@@ -52,7 +75,7 @@ body {
     width: auto;
     color: #353535;
     visibility: hidden;
-    pointer-events: all;
+    pointer-events: none;
     border: 1px solid rgba(193, 193, 193, 0.8);
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.12);
     background: white;
@@ -162,6 +185,13 @@ h1 {
   text-align: center;
 }
 
+h2 {
+  font-family: 'Lora';
+  font-weight: 400;
+  font-size: 24px;
+  text-align: center;
+}
+
 p {
   font-family: "Merriweather";
   font-size: 18px;
@@ -202,6 +232,32 @@ p {
    font-family: "Roboto";
    font-size: 12px;
    text-align: center;
+
+
+}
+
+.tile-group {
+
+}
+
+.legend {
+  font-family: "Roboto";
+}
+.legend-text {
+
+  font-size: 10px;
+
+
+}
+
+.legend-title {
+
+    font-size: 10px;
+  color: #323232;
+  font-weight: 600;
+  text-align: left;
+  text-transform: uppercase;
+
 
 
 }
