--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ body {
   position:fixed;
   top:0;right:0;bottom:0;left:0;
   background: #ececec;
+  max-width: 1440px;
 
 }
 #container {
@@ -25,7 +26,7 @@ body {
     padding: 0.6em 2.5em 0.3em 2.5em;
     border-radius: 1em;
     background: #fff;
-    width: 25em;
+    max-width: 25em;
     z-index: 600;
     box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.1);
 }
@@ -261,3 +262,26 @@ p {
 
 
 }
+@media only screen and (max-width: 600px) { 
+
+  h1 {
+    font-size: 24px;
+  }
+
+    .panel {
+
+
+  margin: 0 0 20em 1em;
+    border-radius: 1em;
+    background: #fff;
+    max-width: 7.5em;
+    z-index: 600;
+    box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.1);
+
+
+  }
+  p {
+    font-size: 12px;
+
+  }
+  }
